Create URL via URI.create()
Replace direct new URL(archive_path_name) with URI.create(archive_path_name).toURL() when constructing archive_url. Added import java.net.URI and removed an unused java.security.AccessControlException import to reflect the change in URL creation.